--- a/source/template_tb_bhv.tmpl
+++ b/source/template_tb_bhv.tmpl
@@ -38,7 +38,7 @@
 -- POSSIBILITY OF SUCH DAMAGE.
 -------------------------------------------------------------------------------
 
-architecture bhv of tb_Top is
+architecture bhv of tb_top is
 
 
     signal tb_clk            : std_logic;
