Initial update of others because of WHILE
example and template needed updating.

--- a/source/template_tb_bhv.tmpl
+++ b/source/template_tb_bhv.tmpl
@@ -427,12 +427,12 @@ architecture bhv of tb_top is
         elsif (inst_idx = 14) then
           wh_state  :=  false;
           case par2 is
-            when 0 => if(par1 = par3) then if_state  :=  true; end if;
-            when 1 => if(par1 > par3) then if_state  :=  true; end if;
-            when 2 => if(par1 < par3) then if_state  :=  true; end if;
-            when 3 => if(par1 /= par3) then if_state :=  true; end if;
-            when 4 => if(par1 >= par3) then if_state :=  true; end if;
-            when 5 => if(par1 <= par3) then if_state :=  true; end if;
+            when 0 => if(par1 = par3) then wh_state  :=  true; end if;
+            when 1 => if(par1 > par3) then wh_state  :=  true; end if;
+            when 2 => if(par1 < par3) then wh_state  :=  true; end if;
+            when 3 => if(par1 /= par3) then wh_state :=  true; end if;
+            when 4 => if(par1 >= par3) then wh_state :=  true; end if;
+            when 5 => if(par1 <= par3) then wh_state :=  true; end if;
             when others =>
               assert (false)
                 report LF & "ERROR:  WHILE instruction got an unexpected value" &
